workaround chrome bug (aka "feature") 644630 (huge spacing between the bullet and list item text)
see https://crbug.com/644630

--- a/stylesheets/index.sass
+++ b/stylesheets/index.sass
@@ -18,6 +18,9 @@
     padding-right: 5px
     padding-top: 5px
 
+    + div
+      float: left
+
   h3
     font-size: 1.3rem
     font-weight: bold
@@ -37,7 +40,7 @@
       content: ')'
 
   ul
-    margin: 0
+    margin-bottom: 0
 
   > li
     +linear-gradient(darken($foreground, 5%), darken($foreground, 14%), $fallback: $foreground)
