--- a/stylesheets/layout.sass
+++ b/stylesheets/layout.sass
@@ -54,12 +54,13 @@ small
   font-size: 0.7em
 
 ul li
-  list-style-position: inside
   list-style-type: disc
 
 ol li
-  list-style-position: inside
   list-style-type: decimal
+
+ul, ol
+  margin-left: 1em
 
 .clearfix
   &:after
